[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satclip"
version = "0.1.0"
description = "SatCLIP – Global, General-Purpose Location Embeddings with Satellite Imagery"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "torchgeo>=0.5",
    "timm>=0.9",
    "lightning>=2.0",
    "rasterio>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "einops>=0.7",
    "huggingface_hub>=0.20",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["satclip*"]
